--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,16 @@
 ==============================================================================
 
 ------------------------------------------------------------------------------
+--- Functionality changes from Asterisk 13.1.0-cert8 to Asterisk 13.1-cert9 --
+------------------------------------------------------------------------------
+
+res_pjsip
+------------------
+ * A new endpoint configuration parameter 'contact_user' has been added which
+   when set will override the default user set on Contact headers in outgoing
+   requests.
+
+------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13.1.0-cert4 to Asterisk 13.1-cert8 --
 ------------------------------------------------------------------------------
 
