--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,14 @@
 --- Functionality changes from Asterisk 14 to Asterisk 15 --------------------
 ------------------------------------------------------------------------------
 
+res_pjsip
+------------------
+ * To facilitate IPv4/IPv6 Dual Stack installations, in which the IP version of
+   the client is unknown in advance, the IP version of the underlying signaling
+   (SIP) channel is re-used for media (RTP) traffic. Therefore on ingress, the
+   client determines the IP version via its SIP-INVITE. For egress, Asterisk
+   uses the last Via= of SIP-REGISTER. Consequently, the endpoint parameters
+   rtp_ipv6 and t38_udptl_ipv6 are not required anymore in pjsip.conf.
 
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 14.0.0 to Asterisk 14.1.0 ----------
