res_pjsip: Add ignore_uri_user_options option.
This implements the chan_sip legacy_useroption_parsing option but with a
better name.

ASTERISK-26316 #close
Reported by: Kevin Harwell

Change-Id: Ib42b0e940dd34d84c7b14bc2e90d1ba392624f62

--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,20 @@
 ==============================================================================
 
 ------------------------------------------------------------------------------
+--- Functionality changes from Asterisk 13.8-cert3 to Asterisk 13.8-cert4 ----
+------------------------------------------------------------------------------
+
+res_pjsip
+------------------
+ * Added "ignore_uri_user_options" global configuration option for
+   compatibility with an ITSP that sends URI user field options.  When enabled
+   the user field is truncated at the first semicolon.
+   Example:
+   URI: "sip:1235557890;phone-context=national@x.x.x.x;user=phone"
+   The user field is "1235557890;phone-context=national"
+   Which is truncated to this: "1235557890"
+
+------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13.8-cert2 to Asterisk 13.8-cert3 ----
 ------------------------------------------------------------------------------
 
