res_pjsip: Re-use IP version of signaling (SIP) for media (RTP).
Previously, the parameter rtp_ipv6 had to be configured for each endpoint in the
file pjsip.conf, in advance, before a SIP client connected to Asterisk. That
defeated the idea of an IPv4/IPv6 Dual Stack server, for which the IP versions
of the client is *not* known in advance. This was no issue for the channel
driver chan_sip and therefore this was changed in res_pjsip only.

ASTERISK-26309 #close

Change-Id: I01a85a8c6723fcc12e86139f80e090e2078d04bb

--- a/CHANGES
+++ b/CHANGES
@@ -79,6 +79,13 @@ res_pjsip
    configure these options then you already had to do a reload after making
    changes.
 
+ * To facilitate IPv4/IPv6 Dual Stack installations, in which the IP version of
+   the client is unknown in advance, the IP version of the underlying signaling
+   (SIP) channel is re-used for media (RTP) traffic. Therefore on ingress, the
+   client determines the IP version via its SIP-INVITE. For egress, Asterisk
+   uses the last Via= of SIP-REGISTER. Consequently, the endpoint parameters
+   rtp_ipv6 and t38_udptl_ipv6 are not required anymore in pjsip.conf.
+
 app_confbridge
 ------------------
   * Some sounds played into the bridge are played asynchronously. This, for
