app_dial:  Add the "Q" option to set the cause on unanswered channels
The "Q" option will set the cause on the unanswered channels when
another channel answers.  It overrides the default of
ANSWERED_ELSEWHERE.

Change-Id: I71742e0919aaa16784c30a2b2e73fbeed7672e47

--- a/CHANGES
+++ b/CHANGES
@@ -83,6 +83,12 @@ Core
     notify systemd of its state using sd_notify. Use 'Type=notify' in
     asterisk.service.
 
+app_dial
+------------------
+ * Added the "Q" option which sets the Q.850/Q.931 cause on unanswered channels
+   when another channel answers the call.  The default of ANSWERED_ELSEWHERE
+   is unchanged.
+
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13 to Asterisk 14 --------------------
 ------------------------------------------------------------------------------
